Fix text overflow when player description takes more than one line

--- a/app.css
+++ b/app.css
@@ -26,6 +26,10 @@ body {
   padding: 10px;
 }
 
+.cell p {
+  height: 1.4em;
+}
+
 .flex {
   display: flex !important;
 }
